Amélioration recherche de stage

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@ transition: all 0.5s;
 }
         </style>
         <section class="annonce">
-            <h2>RECHERCHE DE STAGE DANS NAMUR ET CHARLEROI</h2>
+            <h2>RECHERCHE DE STAGE DANS NAMUR</h2>
             <p>Je recherche un stage rénuméré en tant qu'Employé Administratif dans Namur et Charleroi jusqu'au 31 mars 2026 pour 662,55€ par mois.</p> 
                 <p>Je fais ce stage autant pour en apprendre d'avantage sur l'administration que pour obtenir mon diplôme d'Employé Administratif à l'IFAPME de Namur.</p>
-            <p><a href="mailto:dzenetan.massart@gmail.com"><img class="vibre" src="assets/image/Recherche de stage admin Décembre.png" alt="Recherche de stage administratif" srcset="assets/image/Recherche de stage admin Décembre.png"></a></p>
+            <p><a href="mailto:dzenetan.massart@gmail.com"><img class="vibre" src="assets/image/Recherche de stage admin juin.png" alt="Recherche de stage administratif" srcset="assets/image/Recherche de stage admin juin.png"></a></p>
             <p><a href="CV/employé_de_services.html">📑Mon CV publique se trouve ici</a> et vous pouvez <a href="mailto:dzenetan.massart@gmail.com">📧 me contacter ici</a></p>
         </section>
 
