Mise à jour de recherche de stage octobre 2025

--- a/index.html
+++ b/index.html
@@ -139,6 +139,29 @@ transition: all 0.5s;
                 <p>Je fais ce stage autant pour en apprendre d'avantage sur l'administration que pour obtenir mon diplôme d'Employé Administratif à l'IFAPME de Namur.</p>
             <p><a href="mailto:dzenetan.massart@gmail.com"><img class="vibre" src="assets/image/Recherche de stage admin juin.png" alt="Recherche de stage administratif" srcset="assets/image/Recherche de stage admin juin.png"></a></p>
             <p><a href="CV/employé_de_services.html">📑Mon CV publique se trouve ici</a> et vous pouvez <a href="mailto:dzenetan.massart@gmail.com">📧 me contacter ici</a></p>
+        <article>
+            <h3>Les compétences que je possède pour le métier d' <span>Employé Administratif</span></h3>
+                <ul>
+        <li>
+            Dactylographie
+        </li>
+        <li>
+            Usage de tableur (exemple :Microsoft Excel)
+</li>
+        <li>
+            Usage de logiciel de traitement de texte (exemple :Microsoft Word)
+</li>
+        <li>
+            Usage de logiciel de présentation par diapositive (exemple : Microsoft PowerPoint)
+</li>
+        <li>
+            Classement
+</li>
+        <li>
+            Numérisation et Impression
+</li>            
+    </ul>
+        </article>
         </section>
 
 <section class="competences">
@@ -393,28 +416,10 @@ transition: all 0.5s;
     </main>
     <!--Le main FIN-->
 
-    <!--La div ayant les applications DEBUT-->
-    <section class="apps ">
-        <h2 id="outils">Les Outils</h2>
-        <p class="description">Ici se trouvent les outils que j'ai créés sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github<sup><i class="fa-solid fa-link"></i></sup> </a>!</p>
-        <div class="appsview" id="generate">
-            <article>
-                <h3>Tricks and Tips | Compile des apps et de la doc'</h3>
-                <p>C'est une application pour chercher des applications et de la documentation autour des sites parlant de CSS, Boostrap, HTML, Javascript, ...</p>
-                <a target="_blank" href="https://dzenetanmassart.github.io/Tricks-and-Tips/">S'y rendre</a>
-            </article>
-            <article>
-                <h3>MakeOnWeb | Compile des apps autour de la création sur le Web</h3>
-                <p>C'est une application pour chercher des applications pour produire des images, des vidéos, des modèles 3D, de l'audio et du code sans devoir télécharger un exécutable.</p>
-                <a target="_blank" href="https://dzenetanmassart.github.io/MakeOnWeb/">S'y rendre</a>
-            </article>
-        </div>
-    </section>
-    <!--La div ayant les applications FIN-->
 
     <!--La div ayant le parcours DEBUT-->
     <section class="parcours ">
-        <h2 id="parcours">Le Parcours</h2>
+        <h2 id="parcours">Le Parcours des Logiciels</h2>
         <p class="description">Ici se trouvent mon parcours d'apprentissage des logiciels !</p>
         <div class="parc " id="parc">
 
