--- a/CV/community_manager.html
+++ b/CV/community_manager.html
@@ -164,6 +164,8 @@
 <section class="Etudes">
         <h3>Études</h3>
 <ul>
+        <li><b>Employé administratif</b> - IFAPME – Namur – (2024-2026)
+</li>
     <li><b>Employé de Services</b> - École des Cadets – Namur – (2021-2023)
 </li>
     <li><b>Community Manager</b> – CFD – Online – (2020-2021)
